@@ -1,4 +1,16 @@
+6/24
+  -Finally figured out bitshift
+  -Another bug, I switched the decoding for offset & flag
+  -Found first bug in IP. I am doing the two byte thing wrong. I was
+     for ex:,
+        uint16_t length = p[4] * 256 + p[5]
+	uint16_t id = p[5] *256 + p[6];
+     I was overlapping on the numbers.
 
+6/23
+    -ARP looks fine, but there is still something wrong with IP.
+       I can't get any ICMP packets, my flags are always 000 and
+       my protocol is always 0. So I am doing something wrong.
 
 6/22
     -Got tired of the numbers, started doing indexes on the packet incrementer
